halv fungerande funktion för varukorgen

--- a/productpage.html
+++ b/productpage.html
@@ -68,12 +68,12 @@
                 <div class="product-img">
                   <img src="./css/images/knut.JPG" alt="Produktbild" />
                 </div>
-                <input type="hidden" id="1">
-                <button type="button" class="btn-wish">
+                <input type="hidden" id="0">
+                <button type="button" class="btn-wish" id="btn-wish-0">
                   <i class="fa fa-heart-o" aria-hidden="true"></i>
                 </button>
                 <div class="product-btns">
-                  <button type="button" class="btn-cart">Lägg till i varukorg</button>
+                  <button type="button" class="btn-cart" id="btn-cart-0">Lägg till i varukorg</button>
                 </div>
               </div>
               <div class="product-info">
