--- a/varukorg.html
+++ b/varukorg.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <script src="./javascript/myCart.js" defer></script>
     <script src="./javascript/main.js" defer></script>
 
     <link rel="stylesheet" href="./css/main.css">
@@ -43,6 +44,7 @@
         <h2>Slutför din beställning</h2>
             <div class="cart-box">
                 <h2>Din varukorg</h2>
+                <div class="cart-items"> </div>
             </div>
         </div>
     </main>
