--- a/productpage.html
+++ b/productpage.html
@@ -16,6 +16,7 @@
     <script src="js/jquery-latest.min.js" defer></script>
     <script src="./javascript/main.js" defer></script>
     <script src="./javascript/wishlist.js" defer></script>
+    <script src="./javascript/cart.js" defer></script>
     <!---------CSS--------->
     <link rel="stylesheet" href="./css/main.css" />
     <!---------FontAwesome--------->
@@ -47,12 +48,16 @@
         <a href="./contactpage.html" class="topLink">Kontakt</a>
         <a id="login" class="topLink">Admin</a>
         <div class="cart-container">
-          <div class="cart">
+          <div class="heart-icon">
             <a href="./wishlist.html" class="action-buttons">
               <i class="fa fa-heart" aria-hidden="true"></i><span>0</span>
             </a>
           </div>
-          <a href="./varukorg.html" class="action-buttons"><i class="fa fa-shopping-cart" aria-hidden="true"></i></a>
+          <div class="cart-icon">  
+            <a href="./varukorg.html" class="action-buttons">
+              <i class="fa fa-shopping-cart" aria-hidden="true"></i><span>0</span>
+            </a>
+          </div>
         </div>
       </div>
     </header>
