--- a/wishlist.html
+++ b/wishlist.html
@@ -33,12 +33,16 @@
                 <a class="topLink" href="./contactpage.html">Kontakt</a>
                 <a class="topLink">Admin</a>
             <div class="cart-container">
-                <div class="cart">
+                <div class="heart-icon">
                     <a href="./wishlist.html" class="action-buttons">
                       <i class="fa fa-heart" aria-hidden="true"></i><span>0</span>
                     </a>
                 </div>
-                  <a href="./varukorg.html" class="action-buttons"><i class="fa fa-shopping-cart" aria-hidden="true"></i></a>
+                <div class="cart-icon">  
+                    <a href="./varukorg.html" class="action-buttons">
+                      <i class="fa fa-shopping-cart" aria-hidden="true"></i><span>0</span>
+                    </a>
+                </div>
             </div>
         </div>
     </header>
