döpt om variabler i wishlist.js

--- a/wishlist.html
+++ b/wishlist.html
@@ -26,7 +26,7 @@
             </div>
             <div class="header-text">
                  <h2> Candle store </h2>
-                 <img class="logo" src="./images/candleLogo.jpg" alt="">
+                 <img class="logo" src="./css/images/candleLogo.jpg" alt="">
             </div>
                 <a class="topLink" href="./index.html">Hem</a>
                 <a class="topLink" href="./productpage.html">Produkter</a>
@@ -46,22 +46,27 @@
             </div>
         </div>
     </header>
-    <main>
+    <main class="wishlist-page">
+        <div class="wishlist-page-container">
+
         
-
-        <div class="cart-products-container">
-            <div class="cart-product-header">
-                <h5 class="cart-product-titel">PRODUKT</h5>
-                <h5 class="cart-price">PRIS</h5>
-                <h5 class="cart-quantity">ANTAL</h5>
-                <h5 class="cart-total">TOTALT</h5>
-            </div>
-            <div class="cart-products">
+            <div class="wlist-products">
 
             </div>
+            <!---
+            <div class="cart-products-container">
+                <div class="cart-product-header">
+                    <h5 class="cart-product-titel">PRODUKT</h5>
+                    <h5 class="cart-price">PRIS</h5>
+                    <h5 class="cart-quantity">ANTAL</h5>
+                    <h5 class="cart-total">TOTALT</h5>
+                </div>
+                <div class="wlist-products">
+
+                </div>
+            </div>
+            -->
         </div>
-
-
 
 
 
