--- a/varukorg.html
+++ b/varukorg.html
@@ -33,7 +33,7 @@
                 <a class="topLink" href="./contactpage.html">Kontakt</a>
                 <a class="topLink">Admin</a>
             <div class="cart-container">
-                <div class="cart">
+                <div class="cart-icon">
                     <a href="./wishlist.html" class="action-buttons">
                     <i class="fa fa-heart" aria-hidden="true"></i><span>0</span>
                     </a>
@@ -47,18 +47,10 @@
         <h2>Slutför din beställning</h2>
             <div class="cart-box">
                 <h2>Din varukorg</h2>
-            </div>
-            <div class="cart-products-container">
-                <div class="cart-product-header">
-                    <h5 class="cart-product-titel">PRODUKT</h5>
-                    <h5 class="cart-price">PRIS</h5>
-                    <h5 class="cart-quantity">ANTAL</h5>
-                    <h5 class="cart-total">TOTALT</h5>
-                </div>
                 <div class="cart-products">
-    
+                <!-----------PRODUKTER SOM LÄGGS I KUNDVAGN-->
                 </div>
-            </div>
+            </div> 
         </div>
     </main>
     <footer class="footer">
