flyttade och snyggade till inloggningen

--- a/contactpage.html
+++ b/contactpage.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <script src="./javascript/login.js" defer></script>
     <script src="./javascript/contactpage.js" defer></script>
     <link rel="stylesheet" href="./css/main.css">
 </head>
@@ -75,6 +76,18 @@
                         <H3 class="contact-h3">ÖPPETIDER</H3>    
                         <p>Måndag–fredag 9–16</p> 
                         <p>Lördag & Söndag stängt</p>
+                        <p class="admin-text">Var god logga in för att lägga till nya produkter</p>
+                        <button class="admin-btn" id="login">Logga in</button>
+                        <div id="myModal" class="modal">
+                            <div class="modal-content">
+                                <h1 id="login-header">Administratörs inloggning:</h1>
+                                <form id="login-form">
+                                    <input type="text" name="username" id="username-field" class="login-form-field" placeholder="Username">
+                                    <input type="password" name="password" id="password-field" class="login-form-field" placeholder="Password">
+                                    <input type="submit" value="Login" id="login-form-submit">
+                                </form>
+                            </div>
+                        </div>
                     </div>
                 </div>
             </section>
