--- a/contactpage.html
+++ b/contactpage.html
@@ -4,12 +4,22 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Kontakt - Candle Store</title>
+    <!--------JS-------->
     <script src="./javascript/contactpage.js" defer></script>
+    <!--------CSS-------->
     <link rel="stylesheet" href="./css/main.css">
+    <!---------FontAwesome--------->
+    <script src="https://use.fontawesome.com/500ab8c3e2.js"></script>
+    <!---------Google Fonts--------->
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:ital,wght@0,400;0,500;1,400&family=Quicksand:wght@300;500;600&display=swap" rel="stylesheet">
 </head>
 <body>
     <header>
+        <div class="info-box">
+            <p>ALLTID FRI LEVERANS SAMT FRIA RETURER</p>
+        </div>
         <div class="header">
             <div class="dropdown-menu">
                 <button class="menu-button">
@@ -32,8 +42,8 @@
                 <a class="topLink" href="./contactpage.html">Kontakt</a>
                 <a class="topLink">Admin</a>
             <div class="cart-container">
-                <a href="/wishlist.html"><img class="icons" src="./css/images/heartIcon.jpg"></a>
-                <a href="/varukorg.html"><img class="icons" src="./css/images/cart.jpg"></a>
+                <a href="./wishlist.html" class="action-buttons"><i class="fa fa-heart" aria-hidden="true"></i></a>
+                <a href="./varukorg.html" class="action-buttons"><i class="fa fa-shopping-cart" aria-hidden="true"></i></a>
             </div>
         </div>
     </header>
@@ -73,8 +83,8 @@
                         <p class="contact-Text">Vår kundservice finns alltid till hands för att svara på frågor om dina onlineköp, produktinformation, hjälp med att handla eller information om returer och byten. Du är välkommen att ringa eller skicka mail genom att fylla i vårt kontaktformulär.</P>
                         <p class="contact-Text">Tel. 020 - 08 08 08</p>
                         <H3 class="contact-h3">ÖPPETIDER</H3>    
-                        <p>Måndag–fredag 9–16</p> 
-                        <p>Lördag & Söndag stängt</p>
+                        <p>Måndag–Fredag: 9–16</p> 
+                        <p>Lördag & Söndag: Stängt</p>
                     </div>
                 </div>
             </section>
