--- a/index.html
+++ b/index.html
@@ -1,24 +1,27 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-    <script src="./javascript/login.js" defer></script>
-    <script src="./javascript/main.js" defer></script>
-    <script src="./javascript/varukorg.js" defer></script>
-    <link rel="stylesheet" href="./css/main.css">
-    <script src="https://use.fontawesome.com/500ab8c3e2.js"></script>
-    <link rel="preconnect" href="https://fonts.googleapis.com" />
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Playfair+Display:ital,wght@0,400;0,500;1,400&family=Quicksand:wght@300;500;600&display=swap" rel="stylesheet">
+    <head>
+        <meta charset="UTF-8">
+        <meta http-equiv="X-UA-Compatible" content="IE=edge">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <title>Candle Store</title>
+        <!--------JS-------->
+        <script src="./javascript/login.js" defer></script>
+        <script src="./javascript/main.js" defer></script>
+        <script src="./javascript/varukorg.js" defer></script>
+        <!--------CSS-------->
+        <link rel="stylesheet" href="./css/main.css">
+       <!---------FontAwesome--------->
+        <script src="https://use.fontawesome.com/500ab8c3e2.js"></script>
+        <!---------Google Fonts--------->
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:ital,wght@0,400;0,500;1,400&family=Quicksand:wght@300;500;600&display=swap" rel="stylesheet">
+</head>
 <body>
     <header>
+        <div class="info-box">
+            <p>ALLTID FRI LEVERANS SAMT FRIA RETURER</p>
+        </div>
         <div class="header">
             <div class="dropdown-menu">
                 <button class="menu-button">
@@ -34,7 +37,7 @@
             </div>
             <div class="header-text">
                  <h2> Candle store </h2>
-                 <img class="logo" src="./images/candleLogo.jpg" alt="">
+                 <img class="logo" src="./css/images/candleLogo.jpg" alt="">
             </div>
                 <a class="topLink" href="./index.html">Hem</a>
                 <a class="topLink" href="./productpage.html">Produkter</a>
@@ -69,7 +72,7 @@
             </div>
             <div class="startCard right">
                 <div class="card-text">
-                    <h4>Nyheter inför våren 2022</h4>
+                    <h4>Kommer våren 2022</h4>
                     <p>Pastellfärger</p>
                 </div>
             </div>
