--- a/productpage.html
+++ b/productpage.html
@@ -4,31 +4,31 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Produkter - Studio Anahita</title>
+    <title>Produkter - Candle Store</title>
     <!--------JQUERY-------->
     <script
       src="https://code.jquery.com/jquery-3.6.0.min.js"
       integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4="
       crossorigin="anonymous"
     ></script>
+    <!---------FontAwesome--------->
+    <script src="https://use.fontawesome.com/500ab8c3e2.js"></script>
+    <!---------Google Fonts--------->
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:ital,wght@0,400;0,500;1,400&family=Quicksand:wght@300;500;600&display=swap" rel="stylesheet">
     <!---------JS--------->
     <script src="js/jquery-latest.min.js"></script>
     <script src="./javascript/main.js" defer></script>
     <script src="./javascript/wishlist.js" defer></script>
     <!---------CSS--------->
     <link rel="stylesheet" href="./css/main.css" />
-    <!---------FontAwesome--------->
-    <script
-      src="https://kit.fontawesome.com/ad2a113bb4.js"
-      crossorigin="anonymous"
-    ></script>
-    <!---------Google Fonts--------->
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:ital,wght@0,400;0,500;1,400&family=Quicksand:wght@300;500;600&display=swap" rel="stylesheet">
   </head>
   <body>
     <!--Header börjar-->
     <header>
+      <div class="info-box">
+        <p>ALLTID FRI LEVERANS SAMT FRIA RETURER</p>
+    </div>
       <div class="header">
         <div class="dropdown-menu">
           <button class="menu-button">
