--- a/varukorg.html
+++ b/varukorg.html
@@ -8,9 +8,17 @@
     <script src="./javascript/main.js" defer></script>
 
     <link rel="stylesheet" href="./css/main.css">
+    <!---------FontAwesome--------->
+    <script src="https://use.fontawesome.com/500ab8c3e2.js"></script>
+    <!---------Google Fonts--------->
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:ital,wght@0,400;0,500;1,400&family=Quicksand:wght@300;500;600&display=swap" rel="stylesheet">
 </head>
 <body>
     <header>
+        <div class="info-box">
+            <p>ALLTID FRI LEVERANS SAMT FRIA RETURER</p>
+        </div>
         <div class="header">
             <div class="dropdown-menu">
                 <button class="menu-button">
@@ -33,8 +41,8 @@
                 <a class="topLink" href="./contactpage.html">Kontakt</a>
                 <a class="topLink">Admin</a>
             <div class="cart-container">
-                <a href="/wishlist.html"><img class="icons" src="./css/images/heartIcon.jpg"></a>
-                <a href="/varukorg.html"><img class="icons" src="./css/images/cart.jpg"></a>
+                <a href="./wishlist.html" class="action-buttons"><i class="fa fa-heart" aria-hidden="true"></i></a>
+                <a href="./varukorg.html" class="action-buttons"><i class="fa fa-shopping-cart" aria-hidden="true"></i></a>
             </div>
         </div>
     </header>
