purchase page design

--- a/purchase.html
+++ b/purchase.html
@@ -70,7 +70,7 @@
     <footer class="footer">
         <div class="footer-container">
             <div class="socialMedia-container">
-                <p>Följ oss på sociala medier:</p>
+                <p>Glöm inte att följa oss på sociala medier:</p>
                 <a href="https://www.instagram.com/studioanahita.se/"><img class="mediaIcon" src="./css/images/instagram_icon.png" alt="instagram"></a>
                 <a href="https://sv-se.facebook.com/medieinstitutet/"><img class="mediaIcon" src="./css/images/facebook_icon_black.png" alt="facebook"></a>
             </div>
