--- a/varukorg.html
+++ b/varukorg.html
@@ -6,10 +6,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <script src="./javascript/main.js" defer></script>
-
-    <script src="./javascript/varukorg.js" defer></script>
-    <script src="./javascript/main.js" defer></script>
     <script src="./javascript/varukorgItem.js" defer></script>
+    <script src="./javascript/varukorg.js" defer></script>
+
     <link rel="stylesheet" href="./css/main.css">
 </head>
 <body>
@@ -46,8 +45,7 @@
         <h2>Slutför din beställning</h2>
             <div class="cart-box">
                 <h2>Din varukorg</h2>
-                <div class="productItems"></div>
-                   
+                <div class="cart-items"></div>
             </div>
         </div>
     </main>
