--- a/productpage.html
+++ b/productpage.html
@@ -73,7 +73,7 @@
             <div class="product">
               <div class="product-content">
                 <div class="product-img">
-                  <img src="./css/images/knut.JPG" alt="Produktbild" />
+                  <img class="imgUrl" src="./css/images/knut.JPG" alt="Produktbild" />
                 </div>
                 <input type="hidden" id="1">
                 <button type="button" class="btn-wish">
