fixade länkar och andra saker

--- a/admin.html
+++ b/admin.html
@@ -18,18 +18,17 @@
                     <div class="link"></div>
                 </button>
                 <div class="dropdown-content">
-                    <a href="#hem">Hem</a>
+                    <a href="./index.html">Hem</a>
                     <a href="./productpage.html">Produkter</a>
-                    <a href="#kontakt">Kontakt</a>
+                    <a href="./contactpage.html">Kontakt</a>
                 </div>
             </div>
             <div class="header-text">
                  <h2> Candle store </h2>
-                 <img class="logo" src="./css/images/candleLogo.jpg" alt="">
             </div>
                 <a class="topLink" href="./index.html">Hem</a>
                 <a class="topLink" href="./productpage.html">Produkter</a>
-                <a class="topLink">Kontakt</a>
+                <a class="topLink" href="./contactpage.html">Kontakt</a>
             <div class="cart-container">
                 <a href="/wishlist.html"><img class="icons" src="./css/images/heartIcon.jpg"></a>
                 <a href="/varukorg.html"><img class="icons" src="./css/images/cart.jpg"></a>
@@ -39,7 +38,7 @@
 
     <main>
         <form action="" class="adminForm">
-            <h2>Fyll i uppgifter och bild om föremålet:</h2>
+            <h2 class="admin-header">Fyll i uppgifter och bild om föremålet:</h2>
     
             <div>
                 <label class="adminForm-label" for="objName">Produktens Namn: </label>
