--- a/productpage.html
+++ b/productpage.html
@@ -33,19 +33,22 @@
       <div class="header">
         <div class="dropdown-menu">
           <button class="menu-button">
-            <div class="link"></div>
-            <div class="link"></div>
-            <div class="link"></div>
+              <div class="link"></div>
+              <div class="link"></div>
+              <div class="link"></div>
           </button>
-        </div>
+          <div class="dropdown-content">
+            <a href="./index.html">Hem</a>
+            <a href="./productpage.html">Produkter</a>
+            <a href="./contactpage.html">Kontakt</a>
+          </div>
+      </div>
         <div class="header-text">
           <h2>Candle store</h2>
-          <img class="logo" src="./css/images/candleLogo.jpg" alt="" />
         </div>
         <a href="./index.html" class="topLink">Hem</a>
         <a href="./productpage.html" class="topLink">Produkter</a>
         <a href="./contactpage.html" class="topLink">Kontakt</a>
-        <a id="login" class="topLink">Admin</a>
         <div class="cart-container">
           <a href="./wishlist.html" class="action-buttons"><i class="fa fa-heart" aria-hidden="true"></i></a>
           <a href="./varukorg.html" class="action-buttons"><i class="fa fa-shopping-cart" aria-hidden="true"></i></a>
