--- a/contactpage.html
+++ b/contactpage.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Kontakt</title>
     <script src="./javascript/login.js" defer></script>
     <script src="./javascript/contactpage.js" defer></script>
     <link rel="stylesheet" href="./css/main.css">
@@ -19,19 +19,17 @@
                     <div class="link"></div>
                 </button>
                 <div class="dropdown-content">
-                    <a href="#hem">Hem</a>
+                    <a href="./index.html">Hem</a>
                     <a href="./productpage.html">Produkter</a>
-                    <a href="#kontakt">Kontakt</a>
+                    <a href="./contactpage.html">Kontakt</a>
                 </div>
             </div>
             <div class="header-text">
                  <h2> Candle store </h2>
-                 <img class="logo" src="./css/images/candleLogo.jpg" alt="">
             </div>
                 <a class="topLink" href="./index.html">Hem</a>
                 <a class="topLink" href="./productpage.html">Produkter</a>
                 <a class="topLink" href="./contactpage.html">Kontakt</a>
-                <a class="topLink">Admin</a>
             <div class="cart-container">
                 <a href="/wishlist.html"><img class="icons" src="./css/images/heartIcon.jpg"></a>
                 <a href="/varukorg.html"><img class="icons" src="./css/images/cart.jpg"></a>
