--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Candle store </title>
     <script src="./javascript/main.js" defer></script>
     <script src="./javascript/varukorg.js" defer></script>
     <link rel="stylesheet" href="./css/main.css">
@@ -26,14 +26,13 @@
                     <div class="link"></div>
                 </button>
                 <div class="dropdown-content">
-                    <a href="#hem">Hem</a>
+                    <a href="./index.html">Hem</a>
                     <a href="./productpage.html">Produkter</a>
-                    <a href="#kontakt">Kontakt</a>
+                    <a href="./contactpage.html">Kontakt</a>
                 </div>
             </div>
             <div class="header-text">
                  <h2> Candle store </h2>
-                 <img class="logo" src="./css/images/candleLogo.jpg" alt="">
             </div>
                 <a class="topLink" href="./index.html">Hem</a>
                 <a class="topLink" href="./productpage.html">Produkter</a>
