äntligen fungerar den

--- a/productpage.html
+++ b/productpage.html
@@ -17,6 +17,7 @@
     <script src="./javascript/main.js" defer></script>
     <script src="./javascript/wishlist.js" defer></script>
     <script src="./javascript/varukorg.js" defer></script>
+    <script src="./javascript/varukorgItem.js" defer></script>
     <!---------CSS--------->
     <link rel="stylesheet" href="./css/main.css" />
     <!---------FontAwesome--------->
