--- a/varukorg.html
+++ b/varukorg.html
@@ -25,17 +25,19 @@
                     <div class="link"></div>
                 </button>
                 <div class="dropdown-content">
-                    <a href="./index.html">Hem</a>
+                    <a href="#hem">Hem</a>
                     <a href="./productpage.html">Produkter</a>
-                    <a href="./contactpage.html">Kontakt</a>
+                    <a href="#kontakt">Kontakt</a>
                 </div>
             </div>
             <div class="header-text">
                  <h2> Candle store </h2>
+                 <img class="logo" src="./images/candleLogo.jpg" alt="">
             </div>
                 <a class="topLink" href="./index.html">Hem</a>
                 <a class="topLink" href="./productpage.html">Produkter</a>
                 <a class="topLink" href="./contactpage.html">Kontakt</a>
+                <a class="topLink" href="" id="login">Admin</a>
             <div class="cart-container">
                 <div class="cart-container">
 
@@ -69,10 +71,8 @@
         <h2>Slutför din beställning</h2>
             <div class="cart-box">
                 <h2>Din varukorg</h2>
-                <div class="cart-products">
-                <!-----------PRODUKTER SOM LÄGGS I KUNDVAGN-->
-                </div>
-            </div> 
+                <div class="cart-items"></div>
+            </div>
         </div>
     </main>
     <footer class="footer">
