--- a/index.html
+++ b/index.html
@@ -8,7 +8,10 @@
     <script src="./javascript/main.js" defer></script>
     <script src="./javascript/varukorg.js" defer></script>
     <link rel="stylesheet" href="./css/main.css">
-    <script src="https://use.fontawesome.com/500ab8c3e2.js"></script>
+    <script
+    src="https://kit.fontawesome.com/ad2a113bb4.js"
+    crossorigin="anonymous"
+  ></script>
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link rel="preconnect" href="https://fonts.googleapis.com">
