fixat alla länkar

--- a/admin.html
+++ b/admin.html
@@ -38,7 +38,7 @@
 
     <main>
         <form action="" class="adminForm">
-            <h2 class="admin-header">Fyll i uppgifter och bild om föremålet:</h2>
+            <p class="admin-header">Fyll i uppgifter och bild om föremålet:</p>
     
             <div>
                 <label class="adminForm-label" for="objName">Produktens Namn: </label>
