--- a/productpage.html
+++ b/productpage.html
@@ -32,6 +32,9 @@
   <body>
     <!--Header börjar-->
     <header>
+      <div class="info-box">
+        <p>ALLTID FRI LEVERANS SAMT FRIA RETURER</p>
+      </div>
       <div class="header">
         <div class="dropdown-menu">
           <button class="menu-button">
