--- a/varukorg.html
+++ b/varukorg.html
@@ -8,7 +8,7 @@
     <script src="./javascript/main.js" defer></script>
     <script src="./javascript/varukorgItem.js" defer></script>
     <script src="./javascript/varukorg.js" defer></script>
-
+    <script src="./javascript/wishlist.js" defer></script>
     <link rel="stylesheet" href="./css/main.css">
     <script src="https://kit.fontawesome.com/ad2a113bb4.js" crossorigin="anonymous" defer></script>
 </head>
