--- a/contactpage.html
+++ b/contactpage.html
@@ -9,6 +9,7 @@
     <script src="./javascript/contactpage.js" defer></script>
     <script src="./javascript/varukorg.js" defer></script>
     <script src="./javascript/varukorgItem.js" defer></script>
+    <script src="./javascript/wishlist.js" defer></script>
     <link rel="stylesheet" href="./css/main.css">
     <script
       src="https://kit.fontawesome.com/ad2a113bb4.js"
@@ -41,13 +42,13 @@
             <a class="topLink" href="./contactpage.html">Kontakt</a>
             <div class="cart-container">
                 <div class="heart-icon">
-                <a class="action-buttons" onclick="openNav()">
-                    <i class="fa fa-heart" aria-hidden="true"></i><span></span>
-                </a>
-                </div>
+                    <a class="action-buttons" onclick="openNav()">
+                      <i class="fa fa-heart" aria-hidden="true"></i><span>0</span>
+                    </a>
+                  </div>
                 <div class="cart-icon">  
                 <a href="./varukorg.html" class="action-buttons">
-                    <i class="fa fa-shopping-cart" aria-hidden="true"></i><div class="varuCount"></div>
+                    <i class="fa fa-shopping-cart" aria-hidden="true"></i><div class="varuCount">0</div>
                 </a>
                 </div>
             </div>
@@ -108,6 +109,14 @@
             </section>
         </div>
     </main>
+    <aside id="mySidenav" class="sidenav">
+        <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
+        <h2 class="favorite-h2">Favoriter</h2>
+    
+        <ul class="favorite-item-list">
+            <!--------Lista med proudukter--------->
+        </ul>  
+    </aside>
     <footer class="footer">
         <div class="footer-container">
             <div class="socialMedia-container">
