--- a/varukorg.html
+++ b/varukorg.html
@@ -42,12 +42,12 @@
             <div class="cart-container">
               <div class="heart-icon">
                 <a class="action-buttons" onclick="openNav()">
-                  <i class="fa fa-heart" aria-hidden="true"></i><span></span>
+                  <i class="fa fa-heart" aria-hidden="true"></i><span>0</span>
                 </a>
               </div>
               <div class="cart-icon">  
                 <a href="./varukorg.html" class="action-buttons">
-                  <i class="fa fa-shopping-cart" aria-hidden="true"></i><div class="varuCount"></div>
+                  <i class="fa fa-shopping-cart" aria-hidden="true"></i><div class="varuCount">0</div>
                 </a>
               </div>
             </div>
