gjort info texten mindre

--- a/contactpage.html
+++ b/contactpage.html
@@ -11,6 +11,7 @@
     <script src="./javascript/varukorgItem.js" defer></script>
     <script src="./javascript/wishlist.js" defer></script>
     <link rel="stylesheet" href="./css/main.css">
+    <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:ital,wght@0,400;0,500;1,400&family=Quicksand:wght@300;500;600&display=swap" rel="stylesheet">
     <script
       src="https://kit.fontawesome.com/ad2a113bb4.js"
       crossorigin="anonymous" defer>
