--- a/admin.html
+++ b/admin.html
@@ -7,6 +7,7 @@
     <title>Candle store - Admin page</title>
     <script src="./javascript/adminToLocalStorage.js" defer></script>
     <link rel="stylesheet" href="./css/main.css">
+    <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:ital,wght@0,400;0,500;1,400&family=Quicksand:wght@300;500;600&display=swap" rel="stylesheet">
 </head>
 <body>
     <header>
