sista ändringar innan redovisning

--- a/varukorg.html
+++ b/varukorg.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Varukorg - Candle Store</title>
     <script src="./javascript/main.js" defer></script>
     <script src="./javascript/varukorgItem.js" defer></script>
     <script src="./javascript/varukorg.js" defer></script>
@@ -62,7 +62,7 @@
                 <div class="cart-items"></div>
                 <button class="buy-btn" id="buy">Köp Nu</button>
                 <div id="buyModal" class="modal">
-                    <div class="modal-content">
+                    <div class="buy-modal-content">
                         <p class="buy-header">Tack för din beställning</p>
                         <p class="buy-text">Din order har bekräftats</p>
                     </div>
