lagt till kommentarer

--- a/admin.html
+++ b/admin.html
@@ -13,11 +13,11 @@
     <header>
         <div class="header">
             <div class="dropdown-menu">
-                <button class="menu-button">
+                <div class="menu-button">
                     <div class="link"></div>
                     <div class="link"></div>
                     <div class="link"></div>
-                </button>
+                </div>
                 <div class="dropdown-content">
                     <a href="./index.html">Hem</a>
                     <a href="./productpage.html">Produkter</a>
