--- a/varukorg.html
+++ b/varukorg.html
@@ -12,7 +12,7 @@
     <script src="./javascript/buy.js" defer></script>
     <link rel="stylesheet" href="./css/main.css">
     <script src="https://kit.fontawesome.com/ad2a113bb4.js" crossorigin="anonymous" defer></script>
-    <!---------Google Fonts--------->
+    <!--Google Fonts-->
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:ital,wght@0,400;0,500;1,400&family=Quicksand:wght@300;500;600&display=swap" rel="stylesheet">
 </head>
@@ -23,11 +23,11 @@
         </div>
         <div class="header">
             <div class="dropdown-menu">
-                <button class="menu-button">
+                <div class="menu-button">
                     <div class="link"></div>
                     <div class="link"></div>
                     <div class="link"></div>
-                </button>
+                </div>
                 <div class="dropdown-content">
                     <a href="./index.html">Hem</a>
                     <a href="./productpage.html">Produkter</a>
@@ -43,7 +43,7 @@
             <div class="cart-container">
               <div class="heart-icon">
                 <a class="action-buttons" onclick="openNav()">
-                  <i class="fa fa-heart" aria-hidden="true"></i><span>0</span>
+                    <i class="fa fa-heart" aria-hidden="true"></i><span>0</span>
                 </a>
               </div>
               <div class="cart-icon">  
@@ -75,7 +75,7 @@
         <h2 class="favorite-h2">Favoriter</h2>
     
         <ul class="favorite-item-list">
-            <!--------Lista med proudukter--------->
+            <!--Lista med proudukter-->
         </ul>  
     </aside>
     <footer class="footer">
