--- a/index.html
+++ b/index.html
@@ -71,16 +71,14 @@
                 <div class="card-text">
                     <p>Pastellfärger</p>
                     <h4>Kommer våren 2022</h4>
-                   
                 </div>
             </div>
         </div>
         <aside id="mySidenav" class="sidenav">
             <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
             <h2 class="favorite-h2">Favoriter</h2>
-        
             <ul class="favorite-item-list">
-                <!--------Lista med proudukter--------->
+                    <!--List of products from JavaScript-->
             </ul>  
           </aside>
     </main>
