--- a/productpage.html
+++ b/productpage.html
@@ -338,7 +338,7 @@
         <h2 class="favorite-h2">Favoriter</h2>
     
         <ul class="favorite-item-list">
-            <!--------Lista med proudukter--------->
+            <!--List of products from JavaScript-->
         </ul>  
       </aside>
     </main>
