tog bort de extra och utkomenterart produkter

--- a/productpage.html
+++ b/productpage.html
@@ -80,7 +80,8 @@
             Här hittar ni vårat breda urval av handgjutna ljus
           </p>
           <div class="product-items">
-            <!--
+
+            <!--Ex Produkt 1
             <div class="product">
               <div class="product-content">
                 <div class="product-img">
@@ -106,229 +107,10 @@
                 <h2 class="sm-title">25% rabatt</h2>
               </div>
             </div>
-            -->
+            --Slut produkt 1-->
 
             <!--Produkt genom localStorage-->
 
-            <!--Produkt 2
-            <div class="product">
-              <div class="product-content">
-                <div class="product-img">
-                  <img src="./images/pyramid.JPG" alt="Produktbild" />
-                </div>
-                <button type="button" class="btn-wish">
-                  <i class="fa fa-heart-o" aria-hidden="true"></i>
-                </button>
-                <div class="produkt-btns">
-                  <button type="button" class="btn-cart">
-                    Lägg till i varukorg
-                  </button>
-                </div>
-              </div>
-              <div class="product-info">
-                <a href="#" class="product-name">Pyramid</a>
-                <div class="product-info-top">
-                  <h2 class="sm-title">175g - Brinntid: 6.5h</h2>
-                </div>
-                <p class="product-price">119 sek</p>
-                <p class="product-price">89 sek</p>
-              </div>
-              <div class="off-info">
-                <h2 class="sm-title">25% rabatt</h2>
-              </div>
-            </div>
-            <--Slut produkt 2--
-
-            <--Produkt 3--
-            <div class="product">
-              <div class="product-content">
-                <div class="product-img">
-                  <img src="./images/bubbla.jpeg" alt="Produktbild" />
-                </div>
-                <button type="button" class="btn-wish">
-                  <i class="fa fa-heart-o" aria-hidden="true"></i>
-                </button>
-                <div class="produkt-btns">
-                  <button type="button" class="btn-cart">
-                    Lägg till i varukorg
-                  </button>
-                </div>
-              </div>
-              <div class="product-info">
-                <a href="#" class="product-name">Bubbla</a>
-                <div class="product-info-top">
-                  <h2 class="sm-title">160g - Brinntid: 4.75h</h2>
-                </div>
-                <p class="product-price">119 sek</p>
-                <p class="product-price">89 sek</p>
-              </div>
-              <div class="off-info">
-                <h2 class="sm-title">25% rabatt</h2>
-              </div>
-            </div>
-            <--Slut produkt 3--
-
-            <--Produkt 4--
-            <div class="product">
-              <div class="product-content">
-                <div class="product-img">
-                  <img src="./images/bubblamini.JPG" alt="Produktbild" />
-                </div>
-                <button type="button" class="btn-wish">
-                  <i class="fa fa-heart-o" aria-hidden="true"></i>
-                </button>
-                <div class="produkt-btns">
-                  <button type="button" class="btn-cart">
-                    Lägg till i varukorg
-                  </button>
-                </div>
-              </div>
-              <div class="product-info">
-                <a href="#" class="product-name">Bubbla mini</a>
-                <div class="product-info-top">
-                  <h2 class="sm-title">43g - Brinntid: 2h</h2>
-                </div>
-                <p class="product-price">59 sek</p>
-                <p class="product-price">45 sek</p>
-              </div>
-              <div class="off-info">
-                <h2 class="sm-title">25% rabatt</h2>
-              </div>
-            </div>
-            <--Slut produkt 4--
-
-            <--Produkt 5--
-            <div class="product">
-              <div class="product-content">
-                <div class="product-img">
-                  <img src="./images/snackastor.JPG" alt="Produktbild" />
-                </div>
-                <button type="button" class="btn-wish">
-                  <i class="fa fa-heart-o" aria-hidden="true"></i>
-                </button>
-                <div class="produkt-btns">
-                  <button type="button" class="btn-cart">
-                    Lägg till i varukorg
-                  </button>
-                </div>
-              </div>
-              <div class="product-info">
-                <a href="#" class="product-name">Snäcka stor</a>
-                <div class="product-info-top">
-                  <h2 class="sm-title">182g - Brinntid: 6.5h</h2>
-                </div>
-                <p class="product-price">119 sek</p>
-                <p class="product-price">89 sek</p>
-              </div>
-              <div class="off-info">
-                <h2 class="sm-title">25% rabatt</h2>
-              </div>
-            </div>
-            <--Slut produkt 5--
-
-            <--Produkt 6--
-            <div class="product">
-              <div class="product-content">
-                <div class="product-img">
-                  <img src="./images/snackamini.JPG" alt="Produktbild" />
-                </div>
-                <button type="button" class="btn-wish">
-                  <i class="fa fa-heart-o" aria-hidden="true"></i>
-                </button>
-                <div class="produkt-btns">
-                  <button type="button" class="btn-cart">
-                    Lägg till i varukorg
-                  </button>
-                </div>
-              </div>
-              <div class="product-info">
-                <a href="#" class="product-name">Snäcka mini</a>
-                <div class="product-info-top">
-                  <h2 class="sm-title">45g - Brinntid: 2.5h</h2>
-                </div>
-                <p class="product-price">59 sek</p>
-                <p class="product-price">45 sek</p>
-              </div>
-              <div class="off-info">
-                <h2 class="sm-title">25% rabatt</h2>
-              </div>
-            </div>
-            <--Slut produkt 6--
-
-            <--Produkt 7--
-            <div class="product">        
-              <div class="product-content">          
-                <div class="product-img">            
-                  <img src="./images/gran.JPG" alt="Produktbild">          
-                </div>          
-                <button type="button" class="btn-wish"><i class="fa fa-heart-o" aria-hidden="true"></i></button>          
-                <div class="produkt-btns">
-                  <button type="button" class="btn-cart">Lägg till i varukorg</button>          
-                </div>        
-              </div>        
-              <div class="product-info">      
-                <a href="#" class="product-name">Julgran</a>
-                <div class="product-info-top">
-                  <h2 class="sm-title">74g - Brinntid: 3.5h</h2>
-                </div>
-                <p class="product-price">79 sek</p>    
-                <p class="product-price">59 sek</p>
-              </div>
-              <div class="off-info">
-                <h2 class="sm-title">25% rabatt</h2>      
-              </div>
-            </div>
-            <--Slut produkt 7--
-                    
-            <--Produkt 8--
-            <div class="product">
-              <div class="product-content">
-                <div class="product-img">
-                  <img src="./images/kotte.JPG" alt="Produktbild">
-                </div>
-                <button type="button" class="btn-wish"><i class="fa fa-heart-o" aria-hidden="true"></i></button>
-                <div class="produkt-btns">
-                  <button type="button" class="btn-cart">Lägg till i varukorg</button>
-                </div>
-              </div>
-              <div class="product-info">
-                <a href="#" class="product-name">Kotte</a>
-                <div class="product-info-top">
-                  <h2 class="sm-title">78g - Brinntid: 4h</h2>
-                </div>
-                <p class="product-price">79 sek</p>
-                <p class="product-price">59 sek</p>
-              </div>
-              <div class="off-info">
-                <h2 class="sm-title">25% rabatt</h2>
-              </div>
-            </div>
-            <--Slut produkt 8--
-                    
-            <--Produkt 9--
-            <div class="product">
-              <div class="product-content">
-                <div class="product-img">
-                  <img src="./images/trepack.JPG" alt="Produktbild">
-                </div>
-                <button type="button" class="btn-wish"><i class="fa fa-heart-o" aria-hidden="true"></i></button>
-                <div class="produkt-btns">
-                  <button type="button" class="btn-cart">Lägg till i varukorg</button>
-                </div>
-              </div>
-              <div class="product-info">
-                <a href="#" class="product-name">Trepack</a>
-                <div class="product-info-top">
-                  <h2 class="sm-title">40-80g - Brinntid: ca 4h</h2>
-                </div>
-                <p class="product-price">179 sek</p>
-                <p class="product-price">135 sek</p>
-              </div>
-              <div class="off-info">
-                <h2 class="sm-title">25% rabatt</h2>
-              </div>
-            </div>
-            <--Slut produkt 9-->
           </div>
         </div>
         <button class="btn-load">Ladda mer</button>
